# hs-vm

./: .gitignore  .travis.yml  Instruction.hs  LICENSE  Machine.hs  Makefile  README.md  hs-vm.cabal  vm.hs
example/: add-sub.hsvm  fib.hsvm
src/: Main.hs  Parser.hs  VM.hs
src/VM/: Instruction.hs  Machine.hs
test/: ParserSpec.hs  Spec.hs  VMSpec.hs
